create user functionality

--- a/.env
+++ b/.env
@@ -1,2 +1,4 @@
-REACT_APP_TOKEN=#
-REACT_APP_USERNAME=username
+REACT_APP_TOKEN=23382633-86c2-41b6-8da5-c1c0542c17c8
+REACT_APP_USERNAME=dfsdfssss
+
+made on May 9
